--- a/index.html
+++ b/index.html
@@ -1,45 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Maplands - Web Mapping Software</title>
-    <!-- Add your CSS stylesheets and JavaScript files here -->
-    <link rel="stylesheet" href="./styles.css"></link>
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
-    integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
-    crossorigin=""/>
-    <script src='https://unpkg.com/@turf/turf@6/turf.min.js' crossorigin=""></script>
-    <script src="./landinfocard.js"></script>
-
-</head>
-<body>
-    <header>
-        <h1>Welcome to Maplands</h1>
-        <!-- Add your navigation menu or logo here -->
-    </header>
-
-    <main id="main" class="full-height-width">
-        <!-- Add your map display and other content here -->
-        <div id="viewer"></div>
-        <div style="float: right;">
-            <div id="projects"></div>
-            <div id="info-viewer">
-                <h2>Run Sheet</h2>
-                <p>Click on a project to view the Run Sheet</p>
-                <div id="info"></div>
-        </div>
-    </main>
-
-    <footer>
-        <!-- Add your footer content here -->
-        <p>&copy; 2022 Maplands. All rights reserved.</p>
-    </footer>
-    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
-    integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
-    crossorigin=""></script>
-    <script async src="Lot.js"></script>
-    <script src="./app.js"></script>
-    
-</body>
-</html>
+version https://git-lfs.github.com/spec/v1
+oid sha256:ad48716a72043cc7a8e604aac8afd154fb3507ac400e7bc9c4bdc0f93b0650fb
+size 1559
